--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "wedding-website",
+  "type": "module",
   "version": "1.0.1",
   "description": "A wedding website with loads of features.",
   "main": "npmfile.js",
@@ -22,12 +23,14 @@
     "gulp": "^4.0.2",
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^5.0.0",
+    "gulp-template": "^6.0.0",
     "gulp-uglify": "^3.0.2",
     "sass": "^1.25.0"
   },
   "dependencies": {
     "animate.css": "^3.7.2",
     "font-awesome": "^4.7.0",
+    "gulp-data": "^1.3.1",
     "waypoints": "^4.0.1"
   }
 }
