--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "animate.css": "^3.7.2",
     "font-awesome": "^4.7.0",
+    "graceful-fs": "^4.2.11",
     "gulp-data": "^1.3.1",
     "waypoints": "^4.0.1"
   }
