--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "font-awesome": "^4.7.0",
     "graceful-fs": "^4.2.11",
     "gulp-data": "^1.3.1",
+    "gulp-uglify-es": "^3.0.0",
     "waypoints": "^4.0.1"
   }
 }
