--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "animate.css": "^3.7.2",
+    "del": "^7.1.0",
     "font-awesome": "^4.7.0",
     "graceful-fs": "^4.2.11",
     "gulp-data": "^1.3.1",
